# find

./: .gitignore  .pylintrc  DEVELOPING.md  Dockerfile  README.md  app.py  crawl.py  docker-compose.yml  pyproject.toml  requirements.txt  schema.sql
.github/workflows/: pylint.yml
etc/: pre-commit
src/find/: app.py  crawl.py  db_utils.py  reindex.py  schema.sql  utils.py
tests/: test_crawl.py  test_robots.py
